# Bimanual_Action_Recognition

./: .gitignore  Classification.py  Untitled.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Model/: ConvLSTM.py  GNN_IMG.py  LinkFunction.py  MessageFunction.py  ReadoutFunction.py  UpdateFunction.py
Utils/: logutil.py  utils.py
action_classifier/: .gitignore  ac  readme.md  requirements.txt
action_classifier/actclass/: Action_Classification_GNN.ipynb  __init__.py  data_preprocessing.ipynb  data_preprocessing_py.py  dataset.py  dataset_test.py  exec.py  exec_torch.py  model.py  model_test.py  model_torch.py  plot.py  torch_GNN.ipynb  util.py  util_test.py
action_labeller/: .gitignore  readme.md  requirements.txt  run.py  segmenter.py
feature_extraction_pipeline/: .gitignore  .gitmodules  CMakeLists.txt
feature_extraction_pipeline/data/corcal/: VariantInfo-corcal.xml
feature_extraction_pipeline/etc/: corcal.armarxgui  corcal2.armarxgui
feature_extraction_pipeline/etc/cmake/: Usecorcal.cmake  corcal_interfaces_generate_library.cmake
feature_extraction_pipeline/etc/doxygen/: mainpage.dox
feature_extraction_pipeline/etc/doxygen/pages/: Components.dox  FAQ.dox  GuiPlugins.dox  HowTos.dox  Overview.dox  Tutorials.dox
feature_extraction_pipeline/scenarios/corcal_dev/: corcal_dev.scx
feature_extraction_pipeline/scenarios/corcal_dev/config/: DarknetObjectDetectionApp.cfg  DarknetObjectDetectionApp.darknet.cfg  DarknetObjectDetectionApp.darknet_custom.cfg  DebugObserver.cfg  ExternalApplicationManager.lftd_python_backend.cfg  ImageSequenceProvider.in_dummy.cfg  ImageSequenceProvider.in_dummy_obj.cfg  ImageSequenceProvider.in_train.cfg  KLGImageProviderApp.cfg  LftDHumanPoseEstimationApp.lftd.cfg  OpenNIPointCloudProvider.in_live.cfg  OpenPoseEstimationApp.cfg  OpenPoseEstimationApp.instance1.cfg  OpenPoseEstimationApp.openpose.cfg  PlaybackImageProviderApp.cfg  PlaybackImageProviderApp.interim_pres.cfg  RemoteGuiExampleApp.cfg  RemoteGuiProviderApp.cfg  SSRFeatureExtractorApp.cfg  catalyst.cfg  cnnreplay.cfg  global.cfg  outrec.cfg  outrecApp.cfg  playbackimgprovApp.cfg  ssrfeatex.cfg  visualisation.cfg
feature_extraction_pipeline/scenarios/ral_figure/: ral_figure.scx
feature_extraction_pipeline/scenarios/ral_figure/config/: PlaybackImageProviderApp.instance3.cfg  PlaybackImageProviderApp.s1.cfg  PlaybackImageProviderApp.s4.cfg  PlaybackImageProviderApp.s6.cfg  catalyst.instance3.cfg  catalyst.s1c.cfg  catalyst.s4c.cfg  catalyst.s6c.cfg  global.cfg  visualisation.cfg
feature_extraction_pipeline/source/: CMakeLists.txt
feature_extraction_pipeline/source/corcal/: CMakeLists.txt  core.h
feature_extraction_pipeline/source/corcal/applications/catalyst/: CMakeLists.txt  main.cpp
feature_extraction_pipeline/source/corcal/applications/cnnreplay/: CMakeLists.txt  main.cpp
feature_extraction_pipeline/source/corcal/applications/outrec/: CMakeLists.txt  main.cpp
feature_extraction_pipeline/source/corcal/applications/ssrfeatex/: CMakeLists.txt  main.cpp
feature_extraction_pipeline/source/corcal/applications/visualisation/: CMakeLists.txt  main.cpp
feature_extraction_pipeline/source/corcal/components/: CMakeLists.txt  catalyst.h  ssrfeatex.h  visualisation.h
feature_extraction_pipeline/source/corcal/components/catalyst/: CMakeLists.txt  component.cpp  component.h  functions.h
feature_extraction_pipeline/source/corcal/components/catalyst/functions/: cvt_to_corcal_observations.cpp  cvt_to_point_cloud.cpp  estimate_bounding_box.cpp
feature_extraction_pipeline/source/corcal/components/cnnreplay/: CMakeLists.txt  component.cpp  component.h
feature_extraction_pipeline/source/corcal/components/outrec/: CMakeLists.txt  component.cpp  component.h
feature_extraction_pipeline/source/corcal/components/ssrfeatex/: CMakeLists.txt  component.cpp  component.h
feature_extraction_pipeline/source/corcal/components/ssrfeatex/test/: CMakeLists.txt  component_test.cpp
feature_extraction_pipeline/source/corcal/components/visualisation/: CMakeLists.txt  component.cpp  component.h
feature_extraction_pipeline/source/corcal/core/: CMakeLists.txt  ssr.h  vwm.h
feature_extraction_pipeline/source/corcal/core/ssr/: CMakeLists.txt  functions.h  relations.cpp  relations.h
feature_extraction_pipeline/source/corcal/core/ssr/functions/: evaluate_relations.cpp  serialise.cpp  unserialise.cpp
feature_extraction_pipeline/source/corcal/core/vwm/: CMakeLists.txt  candidate.cpp  candidate.h  helpers.cpp  known_object.cpp  known_object.h  memory.cpp  memory.h  observation.cpp  observation.h
feature_extraction_pipeline/source/corcal/gui/: CMakeLists.txt
feature_extraction_pipeline/source/corcal/gui/ssrvisu/: CMakeLists.txt  gui_plugin.cpp  gui_plugin.h  main_widget.ui  main_widget_controller.cpp  main_widget_controller.h
feature_extraction_pipeline/source/corcal/interface/: CMakeLists.txt  catalyst_component_interface.ice  cnnreplay_component_interface.ice  data_structures.ice  object_instance_listener.ice  outrec_component_interface.ice  pointcloud_listener.ice  ssr_feature_listener.ice  ssrfeatex_component_interface.ice  visualisation_component_interface.ice
kit_bimacs_dataset/: MANIFEST  setup.py
kit_bimacs_dataset/bimacs/: __init__.py  convert_functions.py  iterators.py
